force-app/main/default/objects/Employee__c/fields/Accenture_Emp_Number__c.field-meta.xml
<CustomField>
    <fullName>Accenture_Emp_Number__c</fullName>
    <label>Accenture Emp Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>