force-app/main/default/objects/Employee__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform App Builder</fullName>
            </value>
            <value>
                <fullName>Salesforce Domain Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Domain Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Technical Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform Developer I</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform Developer II</fullName>
            </value>
            <value>
                <fullName>Salesforce Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Service Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Pardot Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Pardot Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud Email Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud Social Specialist</fullName>
            </value>
            <value>
                <fullName>Veeva Administrator</fullName>
            </value>
            <value>
                <fullName>Veeva Vault Administrator</fullName>
            </value>
            <value>
                <fullName>Veeva Network Administrator</fullName>
            </value>
            <value>
                <fullName>Veeva Events Management Administrator</fullName>
            </value>
            <value>
                <fullName>ModelN</fullName>
            </value>
            <value>
                <fullName>MuleSoft</fullName>
            </value>
            <value>
                <fullName>SteelBrick</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>EchoSign</fullName>
            </value>
            <value>
                <fullName>SaaS Methodology Practitioner</fullName>
            </value>
            <value>
                <fullName>Intelligent Patient Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>