force-app/main/default/objects/Employee__c/fields/Manager_TL__c.field-meta.xml
<CustomField>
    <fullName>Manager_TL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager ?</label>
    <type>Checkbox</type>
</CustomField>