force-app/main/default/objects/Employee__c/fields/Roll_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Roll_Off_Date__c</fullName>
    <label>Roll Off Date</label>
    <type>Date</type>
</CustomField>