force-app/main/default/objects/Employee__c/fields/Roll_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Roll_On_Date__c</fullName>
    <label>Roll On Date</label>
    <type>Date</type>
</CustomField>