force-app/main/default/objects/Employee__c/fields/Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Skill_Set__c</fullName>
    <label>Skill Set</label>
    <type>TextArea</type>
</CustomField>