force-app/main/default/objects/Employee__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Lead?</label>
    <type>Checkbox</type>
</CustomField>