force-app/main/default/objects/Employee__c/fields/Team_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee__c.Team_Lead__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Employee__c.Manager_TL__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees (Team Lead Name)</relationshipLabel>
    <relationshipName>Employees1</relationshipName>
    <type>Lookup</type>
</CustomField>